--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,16 @@
     <string name="btn4">Button 4</string>
     <string name="title_activity_auto_complete">AutoCompleteActivity</string>
     <string name="tip">Tips</string>
-
+    <string name="color_red">Red</string>
+    <string name="color_green">Green</string>
+    <string name="color_blue">Blue</string>
+    <string name="width_1">1</string>
+    <string name="width_3">3</string>
+    <string name="width_5">5</string>
+    <string name="width">Width</string>
+    <string name="blur">Blur</string>
+    <string name="emboss">Emboss</string>
+    <string name="color">Color</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
